# agentloop

./: .env.example  .gitignore  CONTRIBUTING.md  Contributing.MD  LICENSE  README.md  Readme.MD  agent.py  environment.py  feedback.py  loop.py  memory.py  modifier.py  pyproject.toml
.github/workflows/: ci.yaml
agentloop/: agent.py  environment.py  feedback.py  loop.py  memory.py  modifier.py
agentloop/providers/: anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py
providers/: anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py
providers/.github/workflows/: ci.yaml
